<resources>
    <string name="app_name">Tracker</string>
    <string name="profile_name">Profile Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="office_location_text">Office Location: </string>
    <string name="office_location">Office Location</string>
    <string name="task_type">Task Type</string>
    <string name="task_name">Task Name</string>
    <string name="creation_date">Creation Date</string>
    <string name="task_assignee">Task Assignee</string>
    <string name="task_assignee_text">Assignee: </string>
    <string name="task_dedline_text">Deadline: </string>
    <string name="priority_level">Priority Level</string>
    <string name="task_description">Task Description</string>
    <string name="create_new_task">Create new Task</string>
    <string name="create_task">Create</string>
    <string name="user_name">User Name</string>
    <string name="status">Status</string>
    <string name="department">Department</string>
    <string name="deadline_picker">Deadline Picker</string>
    <string name="deadline">DeadLine</string>
    <string name="my_tasks">My Tasks</string>
    <string name="my_groups">My Groups</string>
    <string name="group_name">Group Name</string>
    <string name="details">Details</string>
    <string name="created_by">Created By:</string>
    <string name="creator_name">Creator Name</string>
    <string name="priority">Priority :</string>
    <string name="deadline_date">Deadline Date:</string>
    <string name="my_profile">My Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_activities">My Activities</string>
    <string name="activity_type">Activity Type</string>
    <string name="posted_by">Posted By</string>
    <string name="update_task">Update Task</string>
    <string name="save">Save</string>
    <string name="member_name">Member Name</string>
    <string name="my_group_members">My group members</string>
    <string-array name="priority_array">
        <item>Low</item>
        <item>Moderate</item>
        <item>High</item>
    </string-array>
    <string-array name="status_array">
        <item>New</item>
        <item>In progress</item>
        <item>Done</item>
        <item>Blocked</item>
    </string-array>

</resources>