<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        tools:ignore="MissingConstraints"
        android:background="@drawable/tasks_item_shape">


        <ImageView
            android:id="@+id/departmentIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_campaign_24" />

        <TextView
            android:id="@+id/activityType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/departmentIcon"
            android:layout_alignBottom="@+id/departmentIcon"
            android:layout_centerVertical="false"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@+id/departmentIcon"
            android:gravity="center"
            android:text="@string/activity_type"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/activityPostedBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/posted_by"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_below="@id/activityType"
            android:paddingTop="3sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/activityPostDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creation_date"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:layout_below="@id/activityPostedBy"
            android:paddingBottom="3sp"/>



        <View
            style="@style/Divider.Horizontal"
            android:id="@+id/activityDetailDivider"
            android:layout_below="@id/activityPostDate"/>

        <TextView
            android:id="@+id/activityContentType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/activityDetailDivider"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:paddingTop="5sp"
            android:textStyle="bold"
            android:text="TextView" />

        <TextView
            android:id="@+id/activityContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/activityContentType"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:paddingTop="2sp"
            android:paddingBottom="5sp"
            android:text="TextView" />


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>